Fixed alignment issues with mountain.img to center when on desktop page (check for mobile alignment error!)

--- a/static/app.css
+++ b/static/app.css
@@ -567,6 +567,7 @@ background-color: #66BFBF;
 
 
 .mountain-img {
+    margin-left: 30%;
     max-width: 100%;
     height: auto;
     display: block;
